fixed footer responsiveness. will have to test on mobile live

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2258,7 +2258,6 @@ ul#nav li a:active {
 /* ------------------------------------------------------------------ */
 
 footer {
-    padding-top: 10px;
     background: #333333;
     text-align: center;
     position: relative;
@@ -2267,13 +2266,18 @@ footer {
 /* social links */
 
 footer .social li  {
-    margin-top: 5px;
+    margin-bottom: 0px;
+    padding-left: 25px;
+    padding-top: 10px;
     display: inline-block;
 }
 
+footer .social li:first-child {
+    padding-left: 0px;
+}
+
 footer .social a {
-    padding: 15px;
-    font-size: 35px;
+    font-size: 35px; 
     color: #FFFFFF;
 }
 
@@ -2334,9 +2338,7 @@ footer .social a:hover, footer .social a:focus {
 
 /* ==================================================================
 
-*   Ceevee Media Queries
-*   url: styleshout.com
-*   03-18-2014
+*   Media Queries
 
 /* ================================================================== */
 
@@ -2526,30 +2528,6 @@ footer .social a:hover, footer .social a:focus {
     }
     /* footer
  ------------------------------------------------------------------------ */
-    /* copyright */
-    footer .copyright li:before {
-        content: none;
-    }
-    footer .copyright li {
-        margin-right: 12px;
-    }
-    /* social links */
-    footer .social {
-        font-size: 22px;
-    }
-    footer .social li {
-        margin-left: 18px;
-    }
-    /* Go To Top Button */
-    #go-top {
-        margin-left: -22px;
-    }
-    #go-top a {
-        width: 54px;
-        height: 54px;
-        font-size: 18px;
-        line-height: 54px;
-    }
 }
 
 @media only screen and (max-width: 619px) and (min-width: 540px) {
@@ -2601,13 +2579,6 @@ footer .social a:hover, footer .social a:focus {
     }
     /* footer
  ------------------------------------------------------------------------ */
-    /* social links */
-    footer .social {
-        font-size: 20px;
-    }
-    footer .social li {
-        margin-left: 14px;
-    }
 }
 
 @media only screen and (max-width: 479px) and (min-width: 360px) {
